SERVER-28121 DurableViewCatalog shouldn't throw on null byte in view ns

(cherry picked from commit ba3db7220399aedbb871aa8a18d325a877c30d53)